--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 }
 .main-container{
     
-    background: #200054;
+  background: #2000541;
     height: 530px;
     margin: 63px auto;
     text-align: center;
